# DecisionTree

./: .gitignore  .travis.yml  CMakeLists.txt  CPackConfig.cmake  DESCRIPTION  LICENSE  README.md  README_8md.html  Tree_8hpp.html  Tree_8hpp__incl.map  Tree_8hpp__incl.md5  Tree_8hpp_source.html  Tui_8hpp.html  Tui_8hpp__incl.map  Tui_8hpp__incl.md5  Tui_8hpp_source.html  annotated.html  appveyor.yml  classDecTree_1_1DecisionTree-members.html  classDecTree_1_1DecisionTree.html  classDecTree_1_1DecisionTree__coll__graph.map  classDecTree_1_1DecisionTree__coll__graph.md5  classDecisionTree_1_1DecTree-members.html  classDecisionTree_1_1DecTree.html  classDecisionTree_1_1DecTree__coll__graph.map  classDecisionTree_1_1DecTree__coll__graph.md5  classTUI-members.html  classTUI.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  index.html  namespaceDecTree.html  namespaceDecisionTree.html  (+9 more)
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
artifacts/: VisualTree_2feature.dot  VisualTree_4feature.dot  predict_results.csv  real_predicted.csv
cmake/: CodeCoverage.cmake
docs/: doxygen.conf
examples/: tree-cli.cpp
include/: Tree.hpp  Tui.hpp  tree.hpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  namespaces_0.js  search.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+6 more)
sources/: Tree.cpp  Tui.cpp  tree.cpp
tests/: iris_df.csv  iris_df_test.csv  test1.cpp
